Noise texture shows incorrect behaviour for large scale values #98672

Closed
opened 2022-06-08 16:35:36 +02:00 by tempdevnova · 10 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.07

Blender Version
Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: cc66d1020c
Worked: (newest version of Blender that worked as expected)

Short description of error
The noise texture shows incorrect behaviour in both color and fac output when using large scale values in combination with high detail and/or roughness values.

Checkerboard with noise texture as input:
untitled.png

Noise texture:
untitled1.png

The noise texture behaves incorrectly at the edges and the lower left corner of the cube.
If we further increase the scale the artifacts spread towards the positive XYZ corner of the cube, but seem to stop where the coordinates go from negative to positive.
For some reason this behaviour only seems to occur when at least one of th einput coordinates are negative.

Thank you and have a great day!

Exact steps for others to reproduce the error
Test file:
Noise_texture_bug.blend

  • Open file
  • Switch to rendered mode
**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.07 **Blender Version** Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: `cc66d1020c` Worked: (newest version of Blender that worked as expected) **Short description of error** The noise texture shows incorrect behaviour in both color and fac output when using large scale values in combination with high detail and/or roughness values. Checkerboard with noise texture as input: ![untitled.png](https://archive.blender.org/developer/F13138473/untitled.png) Noise texture: ![untitled1.png](https://archive.blender.org/developer/F13138475/untitled1.png) The noise texture behaves incorrectly at the edges and the lower left corner of the cube. If we further increase the scale the artifacts spread towards the positive XYZ corner of the cube, but seem to stop where the coordinates go from negative to positive. For some reason this behaviour only seems to occur when at least one of th einput coordinates are negative. Thank you and have a great day! **Exact steps for others to reproduce the error** Test file: [Noise_texture_bug.blend](https://archive.blender.org/developer/F13138471/Noise_texture_bug.blend) - Open file - Switch to rendered mode
Author

Added subscriber: @tempdevnova

Added subscriber: @tempdevnova

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Is the bug evident when you open the file?

This is what I see:
Untitled.png

Just a note that 431.07 nvidia driver is quite old, that can cause issues.

Is the bug evident when you open the file? This is what I see: ![Untitled.png](https://archive.blender.org/developer/F13139679/Untitled.png) Just a note that 431.07 nvidia driver is quite old, that can cause issues.
Author

Is the bug evident when you open the file? Yes it is exactly like in the imagesI uploaded.

Just a note that 431.07 nvidia driver is quite old, that can cause issues The issue is also present when using CPU rendering.

I just tested Blender 3.2.0 and 3.3.0 alpha issues still persist

`Is the bug evident when you open the file?` Yes it is exactly like in the imagesI uploaded. `Just a note that 431.07 nvidia driver is quite old, that can cause issues` The issue is also present when using CPU rendering. I just tested Blender 3.2.0 and 3.3.0 alpha issues still persist

Ah I did not check cycles, only eevee, so I can reproduce.

Ah I did not check cycles, only eevee, so I can reproduce.

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

This issue was referenced by 30774f01cd

This issue was referenced by 30774f01cdcc0855a444715940d318984c10f27e

This issue was referenced by 0c50f9c4aa

This issue was referenced by 0c50f9c4aaf90eb26240c31fbeff12af519a8ab0
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Lukas Stockner self-assigned this 2022-10-16 02:41:34 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98672
No description provided.